# runtime

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  D:\sample_hello_world_http_response.txt  README.md  configuration.hpp  cpp.hint  run_time.cpp  run_time.hpp  tests.cpp  vcpkg.json
.github/workflows/: auto_release.yml  make_release.yml  push_tests.yml  vcpkg_depedencies.yml
configuration/: readMe.md  run_time.hpp  tasks.hpp
configuration/agreement/: symbols.hpp
docks/: exception_handling.md  opcode_encoding.md  run_time_library_doc.md
include/: attacha_internal_run_time.hpp  attacha_run_time.hpp
include/attacha/: internal_run_time.hpp  run_time.hpp
include/attacha/configuration/: compatibility.hpp  tasks.hpp
include/attacha/configuration/agreement/: symbols.hpp
include/configuration/: run_time.hpp  tasks.hpp
libray/: console.cpp  console.hpp  exceptions.hpp  expand_int.hpp  infinity_int.hpp  list_array.hpp  mem_tool.hpp  multi_thread_for.hpp  shared_ptr_custom.hpp  simple_arr.hpp  string_convert.cpp  string_convert.hpp  string_help.hpp  tree.hpp
run_time/: AttachA_CXX.hpp  CASM.cpp  CASM.hpp  FuncEnvironment.cpp  FuncEnvironment.hpp  FuncEnviropment.cpp  FuncEnviropment.hpp  ValueEnvironment.cpp  ValueEnvironment.hpp  attacha_abi.hpp  attacha_abi_c.cpp  attacha_abi_structs.hpp  attacha_abi_structs.natvis  compile_time_interpreter.cpp  cxxException.cpp  cxxException.hpp  dynamic_call.cpp  dynamic_call.hpp  dynamic_call_asm.asm  except_support.hpp  files.cpp  files.hpp  link_garbage_remover.cpp  link_garbage_remover.hpp  link_garbage_remover.natvis  networking.cpp  networking.hpp  run_time_compiler.cpp  run_time_compiler.hpp  standard_lib.cpp  standard_lib.hpp  tasks.cpp  tasks.hpp  threading.cpp  threading.hpp  tools.hpp  value_change_event.hpp
run_time/tasks_util/: light_stack.cpp  light_stack.hpp  native_workers_singleton.hpp  windows_overlaped.hpp
run_time/util/: enum_helper.hpp  in_place_optonal.hpp
src/: asm.S  asm.asm  main.cpp  run_time.cpp  run_time.hpp  tests.cpp
src/base/: main.cpp  run_time.cpp  run_time.hpp
src/run_time/: AttachA_CXX.cpp  AttachA_CXX.hpp  AttachA_CXX_struct.hpp  ValueEnvironment.cpp  ValueEnvironment.hpp  attacha_abi.hpp  attacha_abi_c.cpp  attacha_abi_structs.hpp  attacha_abi_structs.natvis  cxxException.cpp  cxxException.hpp  except_support.hpp  exceptions.cpp  exceptions.hpp  func_enviro_builder.cpp  func_enviro_builder.hpp  link_garbage_remover.cpp  link_garbage_remover.hpp  link_garbage_remover.natvis  standard_lib.cpp  standard_lib.hpp  tasks.cpp  tasks.hpp  threading.cpp  threading.hpp  tools.hpp  ustring.cpp
src/run_time/asm/: CASM.cpp  CASM.hpp  FuncEnvironment.cpp  FuncEnvironment.hpp  FuncEnvironment.natvis  attacha_environment.cpp  attacha_environment.hpp  compiler.cpp  compiler.hpp  dynamic_call.cpp  dynamic_call.hpp  dynamic_call_asm.asm  dynamic_call_proxy.cpp  dynamic_call_proxy.hpp  exception.cpp  exception.hpp  il_header_decoder.cpp  il_header_decoder.hpp
src/run_time/asm/CASM/linux/: dwarf_builder.hpp
src/run_time/asm/compiler/: compiler_include.hpp  helper_functions.hpp
src/run_time/asm/compiler/dynamic/: crossplatform.hpp
src/run_time/asm/compiler/dynamic/amd64/: _any_os.hpp
src/run_time/asm/compiler/static/: crossplatform.hpp
src/run_time/asm/compiler/static/amd64/: _any_os.hpp
src/run_time/asm/il_compiler/: art_1_0_0.cpp  art_1_0_0.hpp  basic.cpp  basic.hpp
src/run_time/attacha_abi/: structures.cpp
src/run_time/cxx_library/: compiler.cpp  compiler.hpp  files.cpp  files.hpp  networking.cpp  networking.hpp
src/run_time/tasks/: _internal.cpp  _internal.hpp  generator.cpp  scheduler.cpp
src/run_time/tasks/classes/: event_system.cpp
src/run_time/tasks/classes/misc/: generator_restart.cpp  multiply_mutex.cpp  mutex_unify.cpp  task_cancelation.cpp  task_result.cpp
src/run_time/tasks/classes/synchronization/: recursive_task_mutex.cpp  task_condition_variable.cpp  task_limiter.cpp  task_mutex.cpp  task_query.cpp  task_rw_nutex.cpp  task_semaphore.cpp
src/run_time/tasks/classes/task/: executor_count_manager.cpp  task_def.cpp
src/run_time/tasks/util/: cpu_usage.cpp  cpu_usage.hpp  hill_climbing.cpp  hill_climbing.hpp  interrupt.cpp  interrupt.hpp  light_stack.cpp  light_stack.hpp  native_workers_singleton.hpp
src/run_time/tasks_util/: cpu_usage.cpp  cpu_usage.hpp  hill_climbing.cpp  hill_climbing.hpp  light_stack.cpp  light_stack.hpp  native_workers_singleton.hpp  signals.cpp  signals.hpp
src/run_time/util/: enum_class.hpp  enum_helper.hpp  in_place_optional.hpp  in_place_optonal.hpp  templates.hpp  tools.hpp
src/util/: array.hpp  cxxException.cpp  cxxException.hpp  enum_class.hpp  enum_helper.hpp  exceptions.hpp  hash.cpp  hash.hpp  in_place_optional.hpp  link_garbage_remover.cpp  link_garbage_remover.hpp  link_garbage_remover.natvis  macro.hpp  platform.hpp  shared_ptr.hpp  string_help.hpp  threading.cpp  threading.hpp  ustring.cpp  ustring.hpp
tests/: CMakeLists.txt  __tests_startup.cpp  cxx_bridge.cpp  exception_handle.cpp  func_builder.cpp  structure.cpp
